--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "ultraviolet-proxy",
+  "name": "uvproxy-advanced",
   "version": "1.0.0",
-  "description": "Ultraviolet Proxy on Render",
-  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@titaniumnetwork-dev/ultraviolet": "^2.0.0"
   }
 }
